Gave better prefix in file naming. Added dependency on pygresql (pgdb).

--- a/catalogue.html
+++ b/catalogue.html
@@ -44,7 +44,7 @@
         </div>
     </body>
 
-    <script src="database-client.js"></script>
+    <script src="backend-client.js"></script>
     <script>
         var noJsDiv = document.getElementById("no-js"), yesJsDiv = document.getElementById("yes-js");
         var articlesList = document.getElementById("articles-list");
@@ -68,7 +68,6 @@
         }
 
         renderArticle();
-
     </script>
 
 </html>
