--- a/view.html
+++ b/view.html
@@ -8,7 +8,7 @@
         <br><br>
     </body>
 
-    <script src="database-client.js"></script>
+    <script src="backendclient.js"></script>
     <script>
         /*
         * We can either get the post details from form data to this page
